Animal_shelter/force-app/main/default/objects/Animal__c/fields/Intake_Status__c.field-meta.xml
<CustomField>
    <fullName>Intake_Status__c</fullName>
    <label>Intake Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>New</fullName>
            <default>true</default>
            <label>New</label>
        </value>
        <value>
            <fullName>Available</fullName>
        </value>
        <value>
            <fullName>Adopted</fullName>
        </value>
        <value>
            <fullName>Recovery</fullName>
        </value>
        <value>
            <fullName>Reclaimed</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>