Animal_shelter/force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Dog</fullName>
        </value>
        <value>
            <fullName>Cat</fullName>
        </value>
        <value>
            <fullName>Rabbit</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>